[project]
name = "goit-algo2-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "DmytroVasylenko6",email = "tredstoun651@ukr.net"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx (>=3.4.2,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "btrees (>=6.1,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
